
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int req_lock; int * active; } ;
struct isp_ccdc_device {TYPE_1__ lsc; } ;


 int spin_lock_irqsave (int *,unsigned long) ;
 int spin_unlock_irqrestore (int *,unsigned long) ;

__attribute__((used)) static inline int ccdc_lsc_is_configured(struct isp_ccdc_device *ccdc)
{
 unsigned long flags;
 int ret;

 spin_lock_irqsave(&ccdc->lsc.req_lock, flags);
 ret = ccdc->lsc.active != ((void*)0);
 spin_unlock_irqrestore(&ccdc->lsc.req_lock, flags);

 return ret;
}
